tests/sksl/errors/BadCaps.glsl
### Compilation failed:

error: 1: unknown capability flag 'bugFreeDriver'
bool b = sk_Caps.bugFreeDriver;
         ^^^^^^^^^^^^^^^^^^^^^
1 error
